AX: Correct accessibility role when -webkit-box:display is used. https://bugs.webkit.org/show_bug.cgi?id=117706

Reviewed by Chris Fleizach.

Source/WebCore:

accessibility/box-styled-lists.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole): If HTML token is
of the list element type, treat it as a ListItemRole accessibility role, regardless
of what specific renderer is being used.

LayoutTests:

* accessibility/box-styled-lists.html: Added.
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/accessibility/box-styled-lists-expected.txt: Added.
* platform/win/TestExpectations:
* platform/win/accessibility/box-styled-lists-expected.txt: Added.


Canonical link: https://commits.webkit.org/135858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151665 268f45cc-cd09-0410-ab3c-d52691b4dbfc